syntax = "proto3";

option java_multiple_files = true;
option java_package = "RoomAirController";
option java_outer_classname = "RoomAirImpl";

package RoomAirController;

service RoomAir {


	// server streaming rpc
	rpc controllRoomAir (roomNum) returns (stream hourlyAirTracker);
}

message roomNum{
	int32 room = 1;
}

message hourlyAirTracker{
	int32 aqi=1;
	string temperature = 2;
	string airPurifier = 3;
	string carbonMonoxide = 4;

}